--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aplicación con Menú Lateral Minimizable</title>
+    <title>Sistema de Asistencia</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/pagina1.css">
     <!-- Iconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- SheetJS para manejar archivos Excel -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -22,19 +25,19 @@
                 <li>
                     <a href="#" data-page="pagina1" class="active">
                         <i class="fas fa-home"></i>
-                        <span>Página 1</span>
+                        <span>Asistencia</span>
                     </a>
                 </li>
                 <li>
                     <a href="#" data-page="pagina2">
                         <i class="fas fa-chart-bar"></i>
-                        <span>Página 2</span>
+                        <span>Reportes</span>
                     </a>
                 </li>
                 <li>
                     <a href="#" data-page="pagina3">
                         <i class="fas fa-cog"></i>
-                        <span>Página 3</span>
+                        <span>Configuración</span>
                     </a>
                 </li>
             </ul>
@@ -42,10 +45,13 @@
 
         <!-- Contenido principal -->
         <main class="main-content" id="mainContent">
-            <div id="content"></div>
+            <div id="content">
+                <!-- El contenido de la página 1 se cargará aquí -->
+            </div>
         </main>
     </div>
 
     <script src="js/script.js"></script>
+    <script src="js/pagina1.js"></script>
 </body>
 </html>
