con teclado numerico

--- a/pages/pagina1.html
+++ b/pages/pagina1.html
@@ -21,7 +21,9 @@
     <div class="codigo-display" id="display-codigo"></div>
     
     <!-- Teclado numérico -->
-    <div class="teclado-numerico" id="teclado-numerico"></div>
+    <div class="teclado-numerico" id="teclado-numerico">
+        <!-- Los botones se generarán automáticamente con JavaScript -->
+    </div>
     
     <!-- Mensaje de resultado -->
     <div class="mensaje-resultado" id="mensaje-resultado">
